tenzir/bats/data/reference/pipelines_local/test_parse_operators/step_19.ref
error: loader `filee` could not be found
 --> <input>:1:6
  |
1 | load filee | read json
  |      ^^^^^ 
  |
  = hint: must be one of -, file, ftp, ftps, http, https, stdin, tcp, udp
  = docs: https://docs.tenzir.com/connectors